# gst-creator

./: .gitignore  CMakeLists.txt  README.md  bootstrap.sh
doc/: .gitignore  development_plan.tex  main_document.tex
doc/gimp_img/: main_window.xcf
src/: CMakeLists.txt  common.h  main.cpp
src/Commands/: AddCommand.cpp  CMakeLists.txt  ConnectCommand.cpp  DisconnectCommand.cpp  PropertyCommand.cpp  RemoveCommand.cpp  StateCommand.cpp
src/Commands/include/: Commands.h
src/Commands/include/Commands/: AddCommand.h  Command.h  CommandListener.h  ConnectCommand.h  DisconnectCommand.h  PropertyCommand.h  RemoveCommand.h  StateCommand.h
src/Console/: CMakeLists.txt  CommandParser.cpp  ConsoleParser.cpp  ConsoleView.cpp  enum_string_generator.pl
src/Console/include/: Console.h
src/Console/include/Console/: CommandParser.h  ConsoleParser.h  ConsoleView.h
src/FactoryInspector/: CMakeLists.txt  FactoryInspectorView.cpp  PropertyInspectorView.cpp  VariousPropertyInspectorView.cpp
src/FactoryInspector/include/: FactoryInspector.h
src/FactoryInspector/include/FactoryInspector/: FactoryInspectorView.h  PropertyInspectorView.h  VariousPropertyInspectorView.h
src/Logger/: CMakeLists.txt  GstLogger.cpp  GstLoggerProperties.cpp  LoggerView.cpp
src/Logger/include/: Logger.h
src/Logger/include/Logger/: GstLogger.h  GstLoggerProperties.h  LoggerView.h
src/Logger/ui_files/: GstLogger.ui  GstLoggerProperties.ui
src/ObjectInspector/: CMakeLists.txt  ObjectInspectorFilter.cpp  ObjectInspectorItem.cpp  ObjectInspectorModel.cpp  ObjectInspectorView.cpp  PluginItem.cpp
src/ObjectInspector/include/: ObjectInspector.h
src/ObjectInspector/include/ObjectInspector/: ObjectInspectorFilter.h  ObjectInspectorItem.h  ObjectInspectorModel.h  ObjectInspectorView.h  PluginItem.h
src/Properties/: CMakeLists.txt  Property.cpp  PropertyBoolean.cpp  PropertyCaps.cpp  PropertyEnum.cpp  PropertyString.cpp  PropertyWidget.cpp
src/Properties/include/: Properties.h
src/Properties/include/Properties/: Property.h  PropertyBoolean.h  PropertyCaps.h  PropertyEnum.h  PropertyNumeric.h  PropertyString.h  PropertyWidget.h
src/Workspace/: CMakeLists.txt  GstBlock.cpp  GstConnection.cpp  GstPadWidget.cpp  WorkspaceController.cpp  WorkspaceWidget.cpp
src/Workspace/include/: Workspace.h
src/Workspace/include/Workspace/: GstBlock.h  GstBlockInfo.h  GstConnection.h  GstPadWidget.h  WorkspaceController.h  WorkspaceWidget.h
src/controller/: CMakeLists.txt  CodeGenerator.cpp  FileController.cpp  FileLoader.cpp  FileWriter.cpp  MainController.cpp
src/controller/PluginWizard/: FactoryInfo.cpp  PluginCodeGenerator.cpp  PluginInfo.cpp
src/controller/include/: controller.h
src/controller/include/controller/: CodeGenerator.h  FileController.h  FileLoader.h  FileWriter.h  MainController.h
src/controller/include/controller/PluginWizard/: FactoryInfo.h  PluginCodeGenerator.h  PluginInfo.h
src/gui/: CMakeLists.txt  CodeGeneratorDialog.cpp  DraggedTreeView.cpp  DraggedTreeView.h  GstBlock.cpp  GstBlockInfo.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  PluginWizardDialog.cpp  PluginWizzardDialog.cpp  WorkspaceCanvas.cpp  WorkspaceCanvas.h
src/gui/blocks/: CMakeLists.txt  DraggedTreeView.cpp  GstBlock.cpp  GstBlock.h  WorkspaceCanvas.cpp  WorkspaceCanvas.h
src/gui/include/gui/: CodeGeneratorDialog.h  MainWindow.h  PluginWizardDialog.h  PluginWizzardDialog.h
src/gui/ui_files/: CodeGeneratorDialog.ui  MainWindow.ui  PluginWizardDialog.ui  PluginWizzardDialog.ui
src/model/: CMakeLists.txt  ElementFactoryItem.cpp  ElementFactoryItem.h  ElementItem.cpp  ElementItem.h  FactoryItem.cpp  FactoryItem.h  FactoryTreeProxyFilter.cpp  FactoryTreeProxyFilter.h  PluginItem.cpp  PluginItem.h  PluginListModel.cpp  PluginListModel.h  TypeFindFactoryItem.cpp  TypeFindFactoryItem.h
src/qnelibrary/: qneblock.cpp  qneconnection.cpp  qneport.cpp
src/qnelibrary/include/qnelibrary/: qneblock.h  qneconnection.h  qneport.h
src/utils/: CMakeLists.txt  GstUtils.cpp  StringUtils.cpp  enum_string_generator.pl
src/utils/include/: utils.h
src/utils/include/utils/: GstUtils.h  StringUtils.h
test/: CMakeLists.txt  UTmain.cpp
test/Console/: CMakeLists.txt  CommandParser.cpp
